--- a/Index.ipynb
+++ b/Index.ipynb
@@ -21,11 +21,9 @@
    "metadata": {},
    "source": [
     "<h3>Exemples pour le chapitre 3</h3>\n",
-    "<ul>\n",
-    "<li>[Floyd-Steinberg sur une image](Floyd-Steinberg sur image.ipynb)</li>\n",
+    "[Floyd-Steinberg sur une image](Floyd-Steinberg sur image.ipynb)\n",
     "\n",
-    "<li>[Floyd-Steinberg sur une matrice](Floyd-Steinberg sur matrice.ipynb)</li>\n",
-    "</ul>"
+    "[Floyd-Steinberg sur une matrice](Floyd-Steinberg sur matrice.ipynb)"
    ]
   },
   {
