--- a/Index.ipynb
+++ b/Index.ipynb
@@ -13,18 +13,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Table des matières</h2>"
+    "<h2>Table des matières</h2>\n",
+    "<h3>Exemples pour le chapitre 3</h3>\n",
+    "<ul>\n",
+    "<li>[Floyd-Steinberg sur une image](Floyd-Steinberg sur image.ipynb)</li>\n",
+    "\n",
+    "<li>[Floyd-Steinberg sur une matrice](Floyd-Steinberg sur matrice.ipynb)</li>\n",
+    "</ul>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "<h3>Exemples pour le chapitre 3</h3>\n",
-    "[Floyd-Steinberg sur une image](Floyd-Steinberg sur image.ipynb)\n",
-    "\n",
-    "[Floyd-Steinberg sur une matrice](Floyd-Steinberg sur matrice.ipynb)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
