--- a/Index.ipynb
+++ b/Index.ipynb
@@ -16,9 +16,13 @@
     "<h2>Table des matières</h2>\n",
     "<h3>Exemples pour le chapitre 3</h3>\n",
     "<ul>\n",
-    "<li>[Floyd-Steinberg sur une image](Floyd-Steinberg sur image.ipynb)</li>\n",
+    "<li>\n",
+    "[Floyd-Steinberg sur une image](Floyd-Steinberg sur image.ipynb)\n",
+    "</li>\n",
     "\n",
-    "<li>[Floyd-Steinberg sur une matrice](Floyd-Steinberg sur matrice.ipynb)</li>\n",
+    "<li>\n",
+    "[Floyd-Steinberg sur une matrice](Floyd-Steinberg sur matrice.ipynb)\n",
+    "</li>\n",
     "</ul>"
    ]
   },
