--- a/Index.ipynb
+++ b/Index.ipynb
@@ -15,21 +15,11 @@
    "source": [
     "<h2>Table des matières</h2>\n",
     "<h3>Exemples pour le chapitre 3</h3>\n",
-    "<ul>\n",
-    "<li>\n",
-    "[Floyd-Steinberg sur une image](Floyd-Steinberg sur image.ipynb)\n",
-    "</li>\n",
     "\n",
-    "<li>\n",
-    "[Floyd-Steinberg sur une matrice](Floyd-Steinberg sur matrice.ipynb)\n",
-    "</li>\n",
-    "</ul>"
+    "* [Floyd-Steinberg sur une image](Floyd-Steinberg sur image.ipynb)\n",
+    "\n",
+    "* [Floyd-Steinberg sur une matrice](Floyd-Steinberg sur matrice.ipynb)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
