--- a/Floyd-Steinberg sur matrice.ipynb
+++ b/Floyd-Steinberg sur matrice.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "INF8770 Technologies multimédias Polytechnique Montréal\n",
+    "\n",
+    "Exemple de l'application de la méthode Floyd-Steinberg sur une image"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,14 +24,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exemple de l'application de la méthode Floyd-Steinberg sur une matrice\n",
-    "\n",
     "Création d'une image synthétique"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,15 +136,6 @@
     "        print tabulate(image)\n",
     "        print"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
