Ajout du codage prédictif

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -14,6 +14,10 @@
    "metadata": {},
    "source": [
     "<h2>Table des matières</h2>\n",
+    "<h3>Exemples pour le chapitre 1</h3>\n",
+    "\n",
+    "* [Codage prédictif sur une image](Codage predictif sur image.ipynb)\n",
+    "\n",
     "<h3>Exemples pour le chapitre 2</h3>\n",
     "\n",
     "* [Floyd-Steinberg sur une image](Floyd-Steinberg sur image.ipynb)\n",
