--- a/Index.ipynb
+++ b/Index.ipynb
@@ -22,7 +22,9 @@
     "\n",
     "* [Floyd-Steinberg sur une image](Floyd-Steinberg sur image.ipynb)\n",
     "\n",
-    "* [Floyd-Steinberg sur une matrice](Floyd-Steinberg sur matrice.ipynb)\n"
+    "* [Floyd-Steinberg sur une matrice](Floyd-Steinberg sur matrice.ipynb)\n",
+    "\n",
+    "* [Transformée KL sur une image](Transformee KL sur image.ipynb)\n"
    ]
   },
   {
