Ajout de transformee KL

--- a/Transformee KL sur image.ipynb
+++ b/Transformee KL sur image.ipynb
@@ -320,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Résultat sans l'axe faible énergie. L'impact sur l'image est minime."
+    "Résultat sans l'axe de faible énergie. L'impact sur l'image est minime."
    ]
   },
   {
