Ajout fondu enchaîné + corrections orthographiques

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -24,7 +24,11 @@
     "\n",
     "* [Floyd-Steinberg sur une matrice](Floyd-Steinberg sur matrice.ipynb)\n",
     "\n",
-    "* [Transformée KL sur une image](Transformee KL sur image.ipynb)\n"
+    "* [Transformée KL sur une image](Transformee KL sur image.ipynb)\n",
+    "\n",
+    "<h3>Exemples pour le chapitre 8</h3>\n",
+    "\n",
+    "* [Fondu enchaîné](Fondu enchaine.ipynb)"
    ]
   },
   {
