Ajout de plusieurs exemples

--- a/Floyd-Steinberg sur matrice.ipynb
+++ b/Floyd-Steinberg sur matrice.ipynb
@@ -10,14 +10,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "from tabulate import tabulate"
+    "---------------------------------------------------------"
    ]
   },
   {
@@ -29,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +41,7 @@
    "source": [
     "\n",
     "image=[[100,100,100,100,100],[100,100,100,100,100]]\n",
-    "print image"
+    "print(image)"
    ]
   },
   {
@@ -55,62 +53,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "------  ------  ---  ---  ---\n",
-      "  0     143.75  100  100  100\n",
-      "131.25  106.25  100  100  100\n",
-      "------  ------  ---  ---  ---\n",
+      "['0.00', '143.75', '100.00', '100.00', '100.00']\n",
+      "['131.25', '106.25', '100.00', '100.00', '100.00']\n",
       "\n",
-      "-------  --------  -------  ---  ---\n",
-      "  0      255       51.3281  100  100\n",
-      "110.391   71.4844  93.0469  100  100\n",
-      "-------  --------  -------  ---  ---\n",
+      "['0.00', '255.00', '51.33', '100.00', '100.00']\n",
+      "['110.39', '71.48', '93.05', '100.00', '100.00']\n",
       "\n",
-      "-------  --------  -------  -------  ---\n",
-      "  0      255         0      122.456  100\n",
-      "110.391   81.1084  109.087  103.208  100\n",
-      "-------  --------  -------  -------  ---\n",
+      "['0.00', '255.00', '0.00', '122.46', '100.00']\n",
+      "['110.39', '81.11', '109.09', '103.21', '100.00']\n",
       "\n",
-      "-------  --------  -------  -------  -------\n",
-      "  0      255         0        0      153.575\n",
-      "110.391   81.1084  132.047  141.476  107.654\n",
-      "-------  --------  -------  -------  -------\n",
+      "['0.00', '255.00', '0.00', '0.00', '153.57']\n",
+      "['110.39', '81.11', '132.05', '141.48', '107.65']\n",
       "\n",
-      "-------  --------  -------  -------  -------\n",
-      "  0      255         0        0      255\n",
-      "110.391   81.1084  132.047  122.458   75.958\n",
-      "-------  --------  -------  -------  -------\n",
+      "['0.00', '255.00', '0.00', '0.00', '255.00']\n",
+      "['110.39', '81.11', '132.05', '122.46', '75.96']\n",
       "\n",
-      "-  -------  -------  -------  -------\n",
-      "0  255        0        0      255\n",
-      "0  129.404  132.047  122.458   75.958\n",
-      "-  -------  -------  -------  -------\n",
+      "['0.00', '255.00', '0.00', '0.00', '255.00']\n",
+      "['0.00', '129.40', '132.05', '122.46', '75.96']\n",
       "\n",
-      "-  ---  -------  -------  -------\n",
-      "0  255   0         0      255\n",
-      "0  255  77.0993  122.458   75.958\n",
-      "-  ---  -------  -------  -------\n",
+      "['0.00', '255.00', '0.00', '0.00', '255.00']\n",
+      "['0.00', '255.00', '77.10', '122.46', '75.96']\n",
       "\n",
-      "-  ---  -  -------  -------\n",
-      "0  255  0    0      255\n",
-      "0  255  0  156.189   75.958\n",
-      "-  ---  -  -------  -------\n",
+      "['0.00', '255.00', '0.00', '0.00', '255.00']\n",
+      "['0.00', '255.00', '0.00', '156.19', '75.96']\n",
       "\n",
-      "-  ---  -  ---  --------\n",
-      "0  255  0    0  255\n",
-      "0  255  0  255   32.7283\n",
-      "-  ---  -  ---  --------\n",
+      "['0.00', '255.00', '0.00', '0.00', '255.00']\n",
+      "['0.00', '255.00', '0.00', '255.00', '32.73']\n",
       "\n",
-      "-  ---  -  ---  ---\n",
-      "0  255  0    0  255\n",
-      "0  255  0  255    0\n",
-      "-  ---  -  ---  ---\n",
+      "['0.00', '255.00', '0.00', '0.00', '255.00']\n",
+      "['0.00', '255.00', '0.00', '255.00', '0.00']\n",
       "\n"
      ]
     }
@@ -132,10 +110,20 @@
     "        if (i+1)<len(image):\n",
     "            image[i+1][j]=image[i+1][j]+0.3125*erreur\n",
     "        if (j+1)<len(image[0]) and (i+1)<len(image):\n",
-    "            image[i+1][j+1]=image[i+1][j+1]+0.0625*erreur\n",
-    "        print tabulate(image)\n",
-    "        print"
+    "            image[i+1][j+1]=image[i+1][j+1]+0.0625*erreur           \n",
+    "        outformat = [\"%.2f\"%item for item in image[0]]    \n",
+    "        print(str(outformat))\n",
+    "        outformat = [\"%.2f\"%item for item in image[1]]    \n",
+    "        print(str(outformat))\n",
+    "        print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -147,14 +135,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
