--- a/Index.ipynb
+++ b/Index.ipynb
@@ -26,9 +26,25 @@
     "\n",
     "* [Transformée KL sur une image](Transformee KL sur image.ipynb)\n",
     "\n",
+    "<h3>Exemples pour le chapitre 5</h3>\n",
+    "\n",
+    "* [Filtre anti-blocs](FiltreAntiBlocs.ipynb)\n",
+    "\n",
+    "<h3>Exemples pour le chapitre 6</h3>\n",
+    "\n",
+    "* [Codage PCM](Codage PCM.ipynb)\n",
+    "\n",
+    "* [Loi mu](Effet de la loi mu.ipynb)\n",
+    "\n",
+    "* [Codage Golombe-Rice](Codage Golombe-Rice.ipynb)\n",
+    "\n",
     "<h3>Exemples pour le chapitre 8</h3>\n",
     "\n",
-    "* [Fondu enchaîné](Fondu enchaine.ipynb)"
+    "* [Fondu enchaîné](Fondu enchaine.ipynb)\n",
+    "\n",
+    "<h3>Exemples pour le chapitre 9</h3>\n",
+    "\n",
+    "* [Extraction de caractéristiques acoustiques](Caractéristiques acoustiques.ipynb)"
    ]
   },
   {
@@ -48,14 +64,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
