--- a/Codage LZW.ipynb
+++ b/Codage LZW.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,9 @@
     "    if Message[i] not in dictsymb:\n",
     "        dictsymb += [Message[i]]\n",
     "        dictbin += [\"{:b}\".format(nbsymboles)] \n",
-    "        nbsymboles +=1"
+    "        nbsymboles +=1\n",
+    "        \n",
+    "longueurOriginale = nbsymboles*len(Message)    "
    ]
   },
   {
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,12 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "i=0;\n",
     "MessageCode = []\n",
+    "longueur = 0\n",
     "while i < len(Message):\n",
     "    precsouschaine = Message[i] #sous-chaine qui sera codé\n",
     "    souschaine = Message[i] #sous-chaine qui sera codé + 1 caractère (pour le dictionnaire)\n",
@@ -116,8 +119,10 @@
     "        if i < len(Message):  #Si on a pas atteint la fin du message\n",
     "            souschaine += Message[i]  \n",
     "\n",
-    "    #Codage de la plus grande sous-chaine à l'aide du dictionnaire        \n",
-    "    MessageCode += [dictbin[dictsymb.index(precsouschaine)]]\n",
+    "    #Codage de la plus grande sous-chaine à l'aide du dictionnaire  \n",
+    "    codebinaire = [dictbin[dictsymb.index(precsouschaine)]]\n",
+    "    MessageCode += codebinaire\n",
+    "    longueur += len(codebinaire[0]) \n",
     "    #Ajout de la sous-chaine codé + symbole suivant dans le dictionnaire.\n",
     "    dictsymb += [souschaine]\n",
     "    dictbin += [\"{:b}\".format(nbsymboles)] \n",
@@ -139,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,6 +203,32 @@
    "source": [
     "dictionnaire = np.transpose([dictsymb,dictbin])\n",
     "print(dictionnaire) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Longueur en bits du message codé et celle de l'original"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Longueur = 71\n",
+      "Longueur original = 124\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Longueur = {0}\".format(longueur))\n",
+    "print(\"Longueur original = {0}\".format(longueurOriginale))"
    ]
   },
   {
