--- a/Codage par plage.ipynb
+++ b/Codage par plage.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Polytechnique Montréal\n",
     "\n",
-    "Exemple de codage LZW"
+    "Exemple de codage par plage"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Message à coder"
+    "Message à coder et définition de la taille du compteur en bits"
    ]
   },
   {
@@ -33,7 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Message = \"ABAABAABACABBABCDAADACABABAAABAABBABABAABAAB\""
+    "Message = \"ABAAAABBBAABAAAACABBABCDAADACAAAAAAAAAAAAAAAAAAAAAABABABBBA\"\n",
+    "compteur = 3 #La meilleure taille pour ce message est 2 bits. Plusieurs courtes répétitions"
    ]
   },
   {
@@ -58,14 +59,14 @@
     "        dictbin += [\"{:b}\".format(nbsymboles)] \n",
     "        nbsymboles +=1\n",
     "        \n",
-    "longueurOriginale = np.ceil(np.log2(nbsymboles))*len(Message)    "
+    "longueurOriginale = np.ceil(np.log2(nbsymboles))*len(Message) #Longueur du message avec codage binaire"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ajustement des codes binaires selon le nombre total de symboles en ajoutant des zéros. Tri des symboles. Affichage du dictionnaire initial."
+    "Ajustement des codes binaires selon le nombre total de symboles en ajoutant des zéros. Tri des symboles. Affichage du dictionnaire."
    ]
   },
   {
@@ -110,30 +111,19 @@
     "MessageCode = []\n",
     "longueur = 0\n",
     "while i < len(Message):\n",
-    "    precsouschaine = Message[i] #sous-chaine qui sera codé\n",
-    "    souschaine = Message[i] #sous-chaine qui sera codé + 1 caractère (pour le dictionnaire)\n",
-    "    \n",
-    "    #Cherche la plus grande sous-chaine. On ajoute un caractère au fur et à mesure.\n",
-    "    while souschaine in dictsymb and i < len(Message):\n",
+    "    carac = Message[i] #caractere qui sera codé\n",
+    "    repetition = 1\n",
+    "    #Calcul le nombre de répétitions.\n",
+    "    i += 1\n",
+    "    #tient compte de la limite du compteur\n",
+    "    while i < len(Message) and repetition < 2**compteur and Message[i] == carac: \n",
     "        i += 1\n",
-    "        precsouschaine = souschaine\n",
-    "        if i < len(Message):  #Si on a pas atteint la fin du message\n",
-    "            souschaine += Message[i]  \n",
-    "\n",
-    "    #Codage de la plus grande sous-chaine à l'aide du dictionnaire  \n",
-    "    codebinaire = [dictbin[dictsymb.index(precsouschaine)]]\n",
-    "    MessageCode += codebinaire\n",
-    "    longueur += len(codebinaire[0]) \n",
-    "    #Ajout de la sous-chaine codé + symbole suivant dans le dictionnaire.\n",
-    "    dictsymb += [souschaine]\n",
-    "    dictbin += [\"{:b}\".format(nbsymboles)] \n",
-    "    nbsymboles +=1\n",
-    "    \n",
-    "    #Ajout de 1 bit si requis\n",
-    "    if np.ceil(np.log2(nbsymboles)) > len(MessageCode[-1]):\n",
-    "        for j in range(nbsymboles):\n",
-    "            dictbin[j] = \"{:b}\".format(j).zfill(int(np.ceil(np.log2(nbsymboles))))\n",
-    "    \n"
+    "        repetition += 1\n",
+    "    #Codage à l'aide du dictionnaire  \n",
+    "    coderepetition = \"{:b}\".format(repetition-1).zfill(compteur)\n",
+    "    codebinaire = dictbin[dictsymb.index(carac)]\n",
+    "    MessageCode += [coderepetition, codebinaire]\n",
+    "    longueur += len(codebinaire[0]) + len(coderepetition)"
    ]
   },
   {
@@ -152,63 +142,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['00', '001', '000', '100', '110', '0101', '0010', '0100', '0101', '0001', '0010', '0011', '0110', '01111', '01010', '01100', '00110', '00111', '01011', '00111', '00101', '10101', '00001']\n"
+      "['000', '00', '000', '01', '011', '00', '010', '01', '001', '00', '000', '01', '011', '00', '000', '10', '000', '00', '001', '01', '000', '00', '000', '01', '000', '10', '000', '11', '001', '00', '000', '11', '000', '00', '000', '10', '111', '00', '111', '00', '101', '00', '000', '01', '000', '00', '000', '01', '000', '00', '010', '01', '000', '00']\n"
      ]
     }
    ],
    "source": [
-    " print(MessageCode)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Affichage du dictionnaire final"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['A' '00000']\n",
-      " ['B' '00001']\n",
-      " ['C' '00010']\n",
-      " ['D' '00011']\n",
-      " ['AB' '00100']\n",
-      " ['BA' '00101']\n",
-      " ['AA' '00110']\n",
-      " ['ABA' '00111']\n",
-      " ['AAB' '01000']\n",
-      " ['BAC' '01001']\n",
-      " ['CA' '01010']\n",
-      " ['ABB' '01011']\n",
-      " ['BAB' '01100']\n",
-      " ['BC' '01101']\n",
-      " ['CD' '01110']\n",
-      " ['DA' '01111']\n",
-      " ['AAD' '10000']\n",
-      " ['DAC' '10001']\n",
-      " ['CAB' '10010']\n",
-      " ['BABA' '10011']\n",
-      " ['AAA' '10100']\n",
-      " ['ABAA' '10101']\n",
-      " ['ABBA' '10110']\n",
-      " ['ABAB' '10111']\n",
-      " ['BAA' '11000']\n",
-      " ['ABAAB' '11001']\n",
-      " ['B' '11010']]\n"
-     ]
-    }
-   ],
-   "source": [
-    "dictionnaire = np.transpose([dictsymb,dictbin])\n",
-    "print(dictionnaire) "
+    "print(MessageCode)"
    ]
   },
   {
@@ -220,15 +159,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Longueur = 96\n",
-      "Longueur originale = 88.0\n"
+      "Longueur = 108\n",
+      "Longueur originale = 118.0\n"
      ]
     }
    ],
