Ajout de codage par paires

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -18,6 +18,12 @@
     "\n",
     "* [Codage prédictif sur une image](Codage predictif sur image.ipynb)\n",
     "\n",
+    "* [Codage par plage](Codage par plage.ipynb)\n",
+    "\n",
+    "* [Codage par paires d'octets](Codage par paires d'octets.ipynb)\n",
+    "\n",
+    "* [Codage LZW](Codage LZW.ipynb)\n",
+    "\n",
     "<h3>Exemples pour le chapitre 2</h3>\n",
     "\n",
     "* [Floyd-Steinberg sur une image](Floyd-Steinberg sur image.ipynb)\n",
