Petite correction À Golomb-Rice

--- a/Codage Golomb-Rice.ipynb
+++ b/Codage Golomb-Rice.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Polytechnique Montréal\n",
     "\n",
-    "Exemple de codage Golombe-Rice"
+    "Exemple de codage Golomb-Rice"
    ]
   },
   {
