Ajout de Huffman et gradients

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -22,6 +22,8 @@
     "\n",
     "* [Codage par paires d'octets](Codage par paires d'octets.ipynb)\n",
     "\n",
+    "* [Codage Huffman](Codage Huffman.ipynb)\n",
+    "\n",
     "* [Codage LZW](Codage LZW.ipynb)\n",
     "\n",
     "<h3>Exemples pour le chapitre 2</h3>\n",
@@ -42,11 +44,15 @@
     "\n",
     "* [Loi mu](Effet de la loi mu.ipynb)\n",
     "\n",
-    "* [Codage Golombe-Rice](Codage Golombe-Rice.ipynb)\n",
+    "* [Codage Golomb-Rice](Codage Golombe-Rice.ipynb)\n",
     "\n",
     "<h3>Exemples pour le chapitre 8</h3>\n",
     "\n",
     "* [Fondu enchaîné](Fondu enchaine.ipynb)\n",
+    "\n",
+    "* [Calcul des gradients sur une matrice](Gradient sur matrice.ipynb)\n",
+    "\n",
+    "* [Calcul des gradients sur une image et extraction d'arêtes](Gradients et extraction d'arêtes sur une image.ipynb)\n",
     "\n",
     "<h3>Exemples pour le chapitre 9</h3>\n",
     "\n",
