--- a/Codage Huffman.ipynb
+++ b/Codage Huffman.ipynb
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On traverse l'arbre des symboles par parcours préfix, et on construit un arbre semblable de codes binaires. Le première enfant avec 0, le deuxième avec 1.  Ensuite, on utilisera les 2 arbres pour construire le dictionnaire. "
+    "On traverse l'arbre des symboles par parcours préfix, et on construit un arbre semblable de codes binaires. Le premier enfant avec 0, le deuxième avec 1.  Ensuite, on utilisera les 2 arbres pour construire le dictionnaire. "
    ]
   },
   {
