Ajout de codage arithmetique

--- a/Codage arithmétique.ipynb
+++ b/Codage arithmétique.ipynb
@@ -170,7 +170,7 @@
     "p = 0\n",
     "while ok:\n",
     "    p += 1\n",
-    "    #Essayer différente somme de puissance négative de 2\n",
+    "    #Essayer différentes sommes de puissance négative de 2\n",
     "    valfinal += np.power(2.0,-p)\n",
     "    if valfinal > (Debut + Plage):\n",
     "        valfinal -= np.power(2.0,-p) #Hors de la borne maximale, on annule l'ajout.\n",
