--- a/Descripteurs SIFT.ipynb
+++ b/Descripteurs SIFT.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
+    "import cv2  #Avec contrib\n",
     "import matplotlib.pyplot as plt\n",
     "import imutils"
    ]
