mise à jour de l'index

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -20,9 +20,11 @@
     "\n",
     "* [Codage par plage](Codage par plage.ipynb)\n",
     "\n",
-    "* [Codage par paires d'octets](Codage par paires d'octets.ipynb)\n",
-    "\n",
     "* [Codage Huffman](Codage Huffman.ipynb)\n",
+    "\n",
+    "* [Codage arithmétique](Codage arithmétique.ipynb)\n",
+    "\n",
+    "* [Codage par paires d'octets](Codage par paires d'octets.ipynb)\n",
     "\n",
     "* [Codage LZW](Codage LZW.ipynb)\n",
     "\n",
@@ -38,21 +40,29 @@
     "\n",
     "* [Filtre anti-blocs](FiltreAntiBlocs.ipynb)\n",
     "\n",
+    "* [SSIM vs PSNR](Évaluation de la qualité des images.ipynb)\n",
+    "\n",
     "<h3>Exemples pour le chapitre 6</h3>\n",
     "\n",
     "* [Codage PCM](Codage PCM.ipynb)\n",
     "\n",
+    "* [Codage modulation delta](Codage modulation delta.ipynb)\n",
+    "\n",
     "* [Loi mu](Effet de la loi mu.ipynb)\n",
     "\n",
-    "* [Codage Golomb-Rice](Codage Golombe-Rice.ipynb)\n",
+    "* [Codage Golomb-Rice](Codage Golomb-Rice.ipynb)\n",
     "\n",
     "<h3>Exemples pour le chapitre 8</h3>\n",
     "\n",
     "* [Fondu enchaîné](Fondu enchaine.ipynb)\n",
     "\n",
-    "* [Calcul des gradients sur une matrice](Gradient sur matrice.ipynb)\n",
+    "* [Calcul des gradients sur une matrice](Gradients sur matrice.ipynb)\n",
     "\n",
     "* [Calcul des gradients sur une image et extraction d'arêtes](Gradients et extraction d'arêtes sur une image.ipynb)\n",
+    "\n",
+    "* [Calcul de différences de Gaussiennes](Différences de Gaussiennes.ipynb)\n",
+    "\n",
+    "* [Extraction de points SIFT](Descripteurs SIFT.ipynb)\n",
     "\n",
     "<h3>Exemples pour le chapitre 9</h3>\n",
     "\n",
