Correction d'un bug pour LZW

--- a/Codage LZW.ipynb
+++ b/Codage LZW.ipynb
@@ -125,9 +125,10 @@
     "    MessageCode += codebinaire\n",
     "    longueur += len(codebinaire[0]) \n",
     "    #Ajout de la sous-chaine codé + symbole suivant dans le dictionnaire.\n",
-    "    dictsymb += [souschaine]\n",
-    "    dictbin += [\"{:b}\".format(nbsymboles)] \n",
-    "    nbsymboles +=1\n",
+    "    if i < len(Message):\n",
+    "        dictsymb += [souschaine]\n",
+    "        dictbin += [\"{:b}\".format(nbsymboles)] \n",
+    "        nbsymboles +=1\n",
     "    \n",
     "    #Ajout de 1 bit si requis\n",
     "    if np.ceil(np.log2(nbsymboles)) > len(MessageCode[-1]):\n",
@@ -201,8 +202,7 @@
       " ['ABBA' '10110']\n",
       " ['ABAB' '10111']\n",
       " ['BAA' '11000']\n",
-      " ['ABAAB' '11001']\n",
-      " ['B' '11010']]\n"
+      " ['ABAAB' '11001']]\n"
      ]
     }
    ],
