--- a/Index.ipynb
+++ b/Index.ipynb
@@ -60,6 +60,10 @@
     "\n",
     "* [Calcul des gradients sur une image et extraction d'arêtes](Gradients et extraction d'arêtes sur une image.ipynb)\n",
     "\n",
+    "* [Segmentation d'une image avec la méthode des K-Moyennes](Segmentation d'une image.ipynb)\n",
+    "\n",
+    "* [Détection de la peau par distribution Gaussienne sur R et G](DetectiondePeau1.ipynb)\n",
+    "\n",
     "* [Calcul de différences de Gaussiennes](Différences de Gaussiennes.ipynb)\n",
     "\n",
     "* [Extraction de points SIFT](Descripteurs SIFT.ipynb)\n",
