ajout de la correlation croisee

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -60,6 +60,8 @@
     "\n",
     "* [Calcul des gradients sur une image et extraction d'arêtes](Gradients et extraction d'arêtes sur une image.ipynb)\n",
     "\n",
+    "* [Seuillage d'une image](Seuillage d'une image.ipynb)\n",
+    "\n",
     "* [Segmentation d'une image avec la méthode des K-Moyennes](Segmentation d'une image.ipynb)\n",
     "\n",
     "* [Détection de la peau par distribution Gaussienne sur R et G](DetectiondePeau1.ipynb)\n",
@@ -69,6 +71,8 @@
     "* [Extraction de points SIFT](Descripteurs SIFT.ipynb)\n",
     "\n",
     "<h3>Exemples pour le chapitre 9</h3>\n",
+    "\n",
+    "* [Corrélation croisée sur des signaux](Utilisation de la correlation croisée.ipynb)\n",
     "\n",
     "* [Extraction de caractéristiques acoustiques](Caractéristiques acoustiques.ipynb)"
    ]
