Ajout de méthode Bayésienne pour détecteur la peau + correction de bogues.

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -74,7 +74,11 @@
     "\n",
     "* [Corrélation croisée sur des signaux](Utilisation de la correlation croisée.ipynb)\n",
     "\n",
-    "* [Extraction de caractéristiques acoustiques](Caractéristiques acoustiques.ipynb)"
+    "* [Extraction de caractéristiques acoustiques](Caractéristiques acoustiques.ipynb)\n",
+    "\n",
+    "<h3>Exemples pour le chapitre 10</h3>\n",
+    "\n",
+    "* [Détection de la peau par la méthode Bayésienne](DetectiondePeau2.ipynb)"
    ]
   },
   {
