Ajout de la DCT

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -36,6 +36,8 @@
     "\n",
     "* [Transformée KL sur une image](Transformee KL sur image.ipynb)\n",
     "\n",
+    "* [Transformée en cosinus discrète et quantification](Transformée DCT et quantification.ipynb)\n",
+    "\n",
     "<h3>Exemples pour le chapitre 5</h3>\n",
     "\n",
     "* [Filtre anti-blocs](FiltreAntiBlocs.ipynb)\n",
@@ -69,6 +71,8 @@
     "* [Calcul de différences de Gaussiennes](Différences de Gaussiennes.ipynb)\n",
     "\n",
     "* [Extraction de points SIFT](Descripteurs SIFT.ipynb)\n",
+    "\n",
+    "* [Image DC](Image DC.ipynb)\n",
     "\n",
     "<h3>Exemples pour le chapitre 9</h3>\n",
     "\n",
