Ajout de suivi mean-shift

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -82,7 +82,9 @@
     "\n",
     "<h3>Exemples pour le chapitre 10</h3>\n",
     "\n",
-    "* [Détection de la peau par la méthode Bayésienne](DetectiondePeau2.ipynb)"
+    "* [Détection de la peau par la méthode Bayésienne](DetectiondePeau2.ipynb)\n",
+    "\n",
+    "* [Suivi avec la méthode mean-shift](Suivi mean-shift.ipynb)"
    ]
   },
   {
