Ajout de la segmentationpar simple Gaussienne

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -84,7 +84,9 @@
     "\n",
     "* [Détection de la peau par la méthode Bayésienne](DetectiondePeau2.ipynb)\n",
     "\n",
-    "* [Suivi avec la méthode mean-shift](Suivi mean-shift.ipynb)"
+    "* [Suivi avec la méthode mean-shift](Suivi mean-shift.ipynb)\n",
+    "\n",
+    "* [Segmentation de régions d'intérêt (Méthode simple Gaussienne)](Segmentation objets d'intérêt par méthode simple Gaussienne.ipynb)"
    ]
   },
   {
