Ajout du calcul des moments

--- a/Floyd-Steinberg sur matrice.ipynb
+++ b/Floyd-Steinberg sur matrice.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "INF8770 Technologies multimédias Polytechnique Montréal\n",
+    "INF8770 Technologies multimédias \n",
+    "\n",
+    "Polytechnique Montréal\n",
     "\n",
     "Exemple de l'application de la méthode Floyd-Steinberg sur une image"
    ]
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
