--- a/Index.ipynb
+++ b/Index.ipynb
@@ -86,7 +86,9 @@
     "\n",
     "* [Suivi avec la méthode mean-shift](Suivi mean-shift.ipynb)\n",
     "\n",
-    "* [Segmentation de régions d'intérêt (Méthode simple Gaussienne)](Segmentation objets d'intérêt par méthode simple Gaussienne.ipynb)"
+    "* [Segmentation de régions d'intérêt (Méthode simple Gaussienne)](Segmentation objets d'intérêt par méthode simple Gaussienne.ipynb)\n",
+    "\n",
+    "* [Moments invariants](Moments invariants.ipynb)"
    ]
   },
   {
