Ajout de la transformée en ondelettes

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -38,6 +38,8 @@
     "\n",
     "* [Transformée en cosinus discrète et quantification](Transformée DCT et quantification.ipynb)\n",
     "\n",
+    "* [Transformée en ondelettes](Transformée en ondelettes.ipynb)\n",
+    "\n",
     "<h3>Exemples pour le chapitre 5</h3>\n",
     "\n",
     "* [Filtre anti-blocs](FiltreAntiBlocs.ipynb)\n",
