--- a/Index.ipynb
+++ b/Index.ipynb
@@ -82,6 +82,8 @@
     "\n",
     "* [Extraction de caractéristiques acoustiques](Caractéristiques acoustiques.ipynb)\n",
     "\n",
+    "* [Calcul d'un spectrogramme](Calcul spectrogramme.ipynb)\n",
+    "\n",
     "<h3>Exemples pour le chapitre 10</h3>\n",
     "\n",
     "* [Détection de la peau par la méthode Bayésienne](DetectiondePeau2.ipynb)\n",
