Correction codage arithmetique

--- a/Codage arithmétique.ipynb
+++ b/Codage arithmétique.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "Message = \"ABAABCABACABBABCDAADAAABABAAABAABBABABAABAAB\"\n",
-    "SymbACoder = 10"
+    "SymbACoder = 5"
    ]
   },
   {
@@ -109,16 +109,7 @@
       "[['', 0.29752066115702475], ['A', 0.3276974374576997], ['B', 0.3465579226456215], ['C', 0.3503300196832059], ['D', 0.35284475104159546]]\n",
       "B  est dans l'intervalle 2  de  0.3276974374576997  à  0.3465579226456215\n",
       "\n",
-      "[['', 0.3276974374576997], ['A', 0.3379849748329298], ['B', 0.3444146856924486], ['C', 0.34570062786435235], ['D', 0.3465579226456215]]\n",
-      "C  est dans l'intervalle 3  de  0.3444146856924486  à  0.34570062786435235\n",
-      "\n",
-      "[['', 0.3444146856924486], ['A', 0.3451161086953052], ['B', 0.34555449807209054], ['C', 0.3456421759474476], ['D', 0.34570062786435235]]\n",
-      "A  est dans l'intervalle 1  de  0.3444146856924486  à  0.3451161086953052\n",
-      "\n",
-      "[['', 0.3444146856924486], ['A', 0.3447972800576431], ['B', 0.34503640153588966], ['C', 0.34508422583153897], ['D', 0.3451161086953052]]\n",
-      "B  est dans l'intervalle 2  de  0.3447972800576431  à  0.34503640153588966\n",
-      "\n",
-      "[['', 0.3447972800576431], ['A', 0.3449277099548685], ['B', 0.3450092286406344], ['C', 0.34502553237778755], ['D', 0.34503640153588966]]\n"
+      "[['', 0.3276974374576997], ['A', 0.3379849748329298], ['B', 0.3444146856924486], ['C', 0.34570062786435235], ['D', 0.3465579226456215]]\n"
      ]
     }
    ],
@@ -126,7 +117,7 @@
     "Code = ProbSymb[:]\n",
     "Code = [['', 0]] + ProbSymb[:]\n",
     "print(Code)\n",
-    "for i in range(8): \n",
+    "for i in range(SymbACoder): \n",
     "    #Cherche dans quel intervalle est le symbole à coder\n",
     "    temp = list(filter(lambda x: x[0] == Message[i], Code))\n",
     "    indice = Code.index(temp[0])\n",
@@ -160,7 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.344970703125\n"
+      "0.34375\n"
      ]
     }
    ],
@@ -196,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0110000101p-10\n"
+      "1.011p-10\n"
      ]
     }
    ],
@@ -232,8 +223,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Longueur = 14\n",
-      "Longueur originale = 20.0\n"
+      "Longueur = 7\n",
+      "Longueur originale = 10.0\n"
      ]
     }
    ],
@@ -267,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
