Amélioration du calcul du code binaire pour la codage arithmétique

--- a/Codage arithmétique.ipynb
+++ b/Codage arithmétique.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "Message = \"ABAABCABACABBABCDAADAAABABAAABAABBABABAABAAB\"\n",
-    "SymbACoder = 5"
+    "SymbACoder = 6"
    ]
   },
   {
@@ -109,7 +109,10 @@
       "[['', 0.29752066115702475], ['A', 0.3276974374576997], ['B', 0.3465579226456215], ['C', 0.3503300196832059], ['D', 0.35284475104159546]]\n",
       "B  est dans l'intervalle 2  de  0.3276974374576997  à  0.3465579226456215\n",
       "\n",
-      "[['', 0.3276974374576997], ['A', 0.3379849748329298], ['B', 0.3444146856924486], ['C', 0.34570062786435235], ['D', 0.3465579226456215]]\n"
+      "[['', 0.3276974374576997], ['A', 0.3379849748329298], ['B', 0.3444146856924486], ['C', 0.34570062786435235], ['D', 0.3465579226456215]]\n",
+      "C  est dans l'intervalle 3  de  0.3444146856924486  à  0.34570062786435235\n",
+      "\n",
+      "[['', 0.3444146856924486], ['A', 0.3451161086953052], ['B', 0.34555449807209054], ['C', 0.3456421759474476], ['D', 0.34570062786435235]]\n"
      ]
     }
    ],
@@ -139,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On choisit une valeur dans l'intervalle final. On cherche la valeur qui prend le moins de bits. On fait la somme de puissance négative de 2."
+    "On choisit une valeur dans l'intervalle final. On cherche la valeur qui prend le moins de bits. On fait la somme de puissance négative de 2. Permet aussi d'obtenir le code binaire."
    ]
   },
   {
@@ -151,31 +154,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.34375\n"
+      "0.3447265625\n",
+      "0101100001\n"
      ]
     }
    ],
    "source": [
     "ok = True\n",
-    "valfinal = 0\n",
+    "valfinale = 0\n",
+    "valEnBits = list('')\n",
     "p = 0\n",
     "while ok:\n",
     "    p += 1\n",
     "    #Essayer différentes sommes de puissance négative de 2\n",
-    "    valfinal += np.power(2.0,-p)\n",
-    "    if valfinal > (Debut + Plage):\n",
-    "        valfinal -= np.power(2.0,-p) #Hors de la borne maximale, on annule l'ajout.\n",
-    "    elif valfinal > Debut :\n",
+    "    valfinale += np.power(2.0,-p)\n",
+    "    valEnBits += '1' \n",
+    "    if valfinale > (Debut + Plage):\n",
+    "        valfinale -= np.power(2.0,-p) #Hors de la borne maximale, on annule l'ajout.\n",
+    "        valEnBits[-1] ='0'\n",
+    "    elif valfinale > Debut :\n",
     "        ok = False\n",
     "\n",
-    "print(valfinal)"
+    "print(valfinale)\n",
+    "print(\"\".join(valEnBits))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conversion en bits pour évaluer la compression."
+    "Autre façon de convertir en bits qui permet de voir l'importance du choix de la valeur finale."
    ]
   },
   {
@@ -187,7 +195,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.011p-10\n"
+      "0001.0110000100000000000000000000000000000000000000000000\n",
+      "00.010110000100000000000000000000000000000000000000000000\n",
+      "0101100001\n"
      ]
     }
    ],
@@ -196,15 +206,45 @@
     "hex2bin = dict('{:x} {:04b}'.format(x,x).split() for x in range(16))\n",
     "\n",
     "def float_dec2bin(d):\n",
+    "    \n",
+    "    #Note: je ne suis pas sûr que cela fonctionne toujours... J'ai fait un nombre de tests limité.\n",
+    "    \n",
     "    hx = float(d).hex() #Conversion float vers hex\n",
     "    p = hx.index('p')\n",
     "    #Conversion hex vers bin avec la table\n",
     "    bn = ''.join(hex2bin.get(char, char) for char in hx[2:p])\n",
-    "    return ( bn.strip('0') + hx[p:p+2]\n",
-    "            + bin(int(hx[p+2:]))[2:])\n",
+    "    code = list(bn)\n",
+    "    indice = code.index('.') # position du séparateur des décimales\n",
+    "    puissance = int(hx[p+2:]) # Décalage\n",
+    "    if puissance >= indice:\n",
+    "        #On ajoute des zéros pour pouvoir décaler le séparateur des décimales.\n",
+    "        zerosdeplus = \"0\" * (puissance-indice+1)\n",
+    "        bn = zerosdeplus + bn\n",
+    "        code = list(bn)\n",
+    "        indice = code.index('.') # nouvelle position du séparateur des décimales\n",
     "\n",
-    "messagecode = float_dec2bin(valfinal)\n",
-    "print(messagecode)"
+    "    print(''.join(code))    \n",
+    "    \n",
+    "    #Décalage du séparateur décimal selon la puissance    \n",
+    "    for i in range(0,puissance):\n",
+    "        temp = code[indice-i-1];\n",
+    "        code[indice-i-1] = code[indice-i]\n",
+    "        code[indice-i] = temp\n",
+    "     \n",
+    "    print(''.join(code))\n",
+    "    \n",
+    "    #Enlève les zéros de trop et la partie avant le séparateur décimal\n",
+    "    \n",
+    "    ind = code.index('.')+1\n",
+    "    code = code[ind:]\n",
+    "    ind= code[::-1].index('1')\n",
+    "    code = code[:(len(code)-ind)]   \n",
+    "    codebinaire = ''.join(code)\n",
+    "\n",
+    "    return codebinaire\n",
+    "\n",
+    "messagecode = float_dec2bin(valfinale) #Essayer d'autres valeurs qui tombent dans l'intervalle\n",
+    "print(messagecode)\n"
    ]
   },
   {
@@ -223,13 +263,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Longueur = 7\n",
-      "Longueur originale = 10.0\n"
+      "Longueur = 10\n",
+      "Longueur originale = 12.0\n"
      ]
     }
    ],
    "source": [
-    "longueur = messagecode.count('0') + messagecode.count('1') + messagecode.count('-') \n",
+    "longueur = len(messagecode)\n",
     "print(\"Longueur = {0}\".format(longueur))\n",
     "print(\"Longueur originale = {0}\".format(longueurOriginale))"
    ]
