--- a/Codage par plage.ipynb
+++ b/Codage par plage.ipynb
@@ -33,8 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Message = \"ABAAAABBBAABAAAACABBABCDAADACAAAAAAAAAAAAAAAAAAAAAABABABBBA\"\n",
-    "compteur = 3 #La meilleure taille pour ce message est 2 bits. Plusieurs courtes répétitions"
+    "Message = \"AAAABAAAAAABBBAABAAAACABBABCDAADACAAAAAAAAAAAAAAAAAAAAAABABABBBA\"\n",
+    "compteur = 2 #La meilleure taille pour ce message est 2 bits. Plusieurs courtes répétitions"
    ]
   },
   {
@@ -123,7 +123,7 @@
     "    coderepetition = \"{:b}\".format(repetition-1).zfill(compteur)\n",
     "    codebinaire = dictbin[dictsymb.index(carac)]\n",
     "    MessageCode += [coderepetition, codebinaire]\n",
-    "    longueur += len(codebinaire[0]) + len(coderepetition)"
+    "    longueur += len(codebinaire) + len(coderepetition)"
    ]
   },
   {
@@ -142,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['000', '00', '000', '01', '011', '00', '010', '01', '001', '00', '000', '01', '011', '00', '000', '10', '000', '00', '001', '01', '000', '00', '000', '01', '000', '10', '000', '11', '001', '00', '000', '11', '000', '00', '000', '10', '111', '00', '111', '00', '101', '00', '000', '01', '000', '00', '000', '01', '000', '00', '010', '01', '000', '00']\n"
+      "['11', '00', '00', '01', '11', '00', '01', '00', '10', '01', '01', '00', '00', '01', '11', '00', '00', '10', '00', '00', '01', '01', '00', '00', '00', '01', '00', '10', '00', '11', '01', '00', '00', '11', '00', '00', '00', '10', '11', '00', '11', '00', '11', '00', '11', '00', '11', '00', '01', '00', '00', '01', '00', '00', '00', '01', '00', '00', '10', '01', '00', '00']\n"
      ]
     }
    ],
@@ -166,8 +166,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Longueur = 108\n",
-      "Longueur originale = 118.0\n"
+      "Longueur = 124\n",
+      "Longueur originale = 128.0\n"
      ]
     }
    ],
@@ -175,13 +175,6 @@
     "print(\"Longueur = {0}\".format(longueur))\n",
     "print(\"Longueur originale = {0}\".format(longueurOriginale))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -200,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
