Mise à jour pour as_gray

--- a/Transformée DCT et quantification.ipynb
+++ b/Transformée DCT et quantification.ipynb
@@ -47,7 +47,7 @@
     }
    ],
    "source": [
-    "img = io.imread('RGB.jpg', as_grey=True)*255\n",
+    "img = io.imread('RGB.jpg', as_gray=True)*255\n",
     "plt.imshow(img,cmap = plt.get_cmap('gray'))\n",
     "plt.show()"
    ]
@@ -267,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
