--- a/Codage LZ77.ipynb
+++ b/Codage LZ77.ipynb
@@ -22,11 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "message = \"ABCABABABABABABABABABABABABABABABABABABABABAB\""
+    "message = \"ABAAAAACABAABBAABBABCEDAABADA\""
    ]
   },
   {
@@ -38,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tailleDict = 20  # Taille du dictionnaire"
+    "tailleDict = 4  # Taille du dictionnaire"
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -66,11 +66,31 @@
       "A\n",
       "[(0, 0, 'A'), (0, 0, 'B')]\n",
       "AB\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (0, 0, 'C')]\n",
-      "ABC\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (0, 0, 'C'), (0, 2, 'A')]\n",
-      "ABCABA\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (0, 0, 'C'), (0, 2, 'A'), (4, 38, 'B')]\n"
+      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A')]\n",
+      "ABAA\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C')]\n",
+      "AAAC\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B')]\n",
+      "ACAB\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A')]\n",
+      "ABAA\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B')]\n",
+      "AABB\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B')]\n",
+      "BBAB\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B'), (0, 0, 'C')]\n",
+      "BABC\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B'), (0, 0, 'C'), (0, 0, 'E')]\n",
+      "ABCE\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D')]\n",
+      "BCED\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A')]\n",
+      "CEDA\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A'), (1, 1, 'B')]\n",
+      "DAAB\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A'), (1, 1, 'B'), (2, 1, 'D')]\n",
+      "ABAD\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A'), (1, 1, 'B'), (2, 1, 'D'), (0, 0, 'A')]\n"
      ]
     }
    ],
@@ -90,7 +110,7 @@
     "            pos, length = symbDict.rfind(sousChaine), len(sousChaine) #dernière occurrence si plusieurs choix\n",
     "            break\n",
     "        sousChaine = sousChaine[:-1] # On a pas trouvé, donc on enlève un élément.\n",
-    "\n",
+    "        \n",
     "    # Regarde ensuite si on peut allonger la sous-chaine trouvée après la position de l'index: AB|ABABABABAB\n",
     "    increment = 0\n",
     "    while length > 0 \\\n",
@@ -101,6 +121,10 @@
     "\n",
     "    # Enregistrement des triplets\n",
     "    c = message[index + length]  #Caractère suivant non encodé.\n",
+    "    \n",
+    "    if length > 0:\n",
+    "        pos = len(symbDict)-pos\n",
+    "        \n",
     "    triplets.append((pos, length, c))\n",
     "\n",
     "    index += max(length+1, 1)  # Avance la position dans le message\n",
@@ -117,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ABCABABABABABABABABABABABABABABABABABABABABAB\n",
+      "ABAAAAACABAABBAABBABCEDAABADA\n",
       "True\n"
      ]
     }
