--- a/Codage arithmetique.ipynb
+++ b/Codage arithmetique.ipynb
@@ -172,7 +172,7 @@
     "    if valfinale > (Debut + Plage):\n",
     "        valfinale -= np.power(2.0,-p) #Hors de la borne maximale, on annule l'ajout.\n",
     "        valEnBits[-1] ='0'\n",
-    "    elif valfinale > Debut :\n",
+    "    elif valfinale >= Debut :\n",
     "        ok = False\n",
     "\n",
     "print(valfinale)\n",
@@ -298,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
