--- a/Codage LZ77.ipynb
+++ b/Codage LZ77.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "message = \"ABAAAAACABAABBAABBABCEDAABADA\""
+    "message = \"ABAACABAABBAABBABCEDAABADA\""
    ]
   },
   {
@@ -38,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tailleDict = 4  # Taille du dictionnaire"
+    "tailleDict = 4  # Taille du dictionnaire (0,1,2,3,...)"
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,31 +66,31 @@
       "A\n",
       "[(0, 0, 'A'), (0, 0, 'B')]\n",
       "AB\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A')]\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A')]\n",
       "ABAA\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C')]\n",
-      "AAAC\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B')]\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C')]\n",
+      "BAAC\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B')]\n",
       "ACAB\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A')]\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A')]\n",
       "ABAA\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B')]\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B')]\n",
       "AABB\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B')]\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B')]\n",
       "BBAB\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B'), (0, 0, 'C')]\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B'), (0, 0, 'C')]\n",
       "BABC\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B'), (0, 0, 'C'), (0, 0, 'E')]\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B'), (0, 0, 'C'), (0, 0, 'E')]\n",
       "ABCE\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D')]\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D')]\n",
       "BCED\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A')]\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A')]\n",
       "CEDA\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A'), (1, 1, 'B')]\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A'), (3, 1, 'B')]\n",
       "DAAB\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A'), (1, 1, 'B'), (2, 1, 'D')]\n",
+      "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A'), (3, 1, 'B'), (2, 1, 'D')]\n",
       "ABAD\n",
-      "[(0, 0, 'A'), (0, 0, 'B'), (2, 1, 'A'), (2, 3, 'C'), (2, 1, 'B'), (2, 1, 'A'), (3, 1, 'B'), (4, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A'), (1, 1, 'B'), (2, 1, 'D'), (0, 0, 'A')]\n"
+      "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A'), (3, 1, 'B'), (2, 1, 'D'), (0, 0, 'A')]\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
     "            pos, length = symbDict.rfind(sousChaine), len(sousChaine) #dernière occurrence si plusieurs choix\n",
     "            break\n",
     "        sousChaine = sousChaine[:-1] # On a pas trouvé, donc on enlève un élément.\n",
-    "        \n",
+    "     \n",
     "    # Regarde ensuite si on peut allonger la sous-chaine trouvée après la position de l'index: AB|ABABABABAB\n",
     "    increment = 0\n",
     "    while length > 0 \\\n",
@@ -121,9 +121,6 @@
     "\n",
     "    # Enregistrement des triplets\n",
     "    c = message[index + length]  #Caractère suivant non encodé.\n",
-    "    \n",
-    "    if length > 0:\n",
-    "        pos = len(symbDict)-pos\n",
     "        \n",
     "    triplets.append((pos, length, c))\n",
     "\n",
@@ -148,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ABAAAAACABAABBAABBABCEDAABADA\n",
+      "ABAACABAABBAABBABCEDAABADA\n",
       "True\n"
      ]
     }
@@ -170,14 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Taux de compression:  0.6666666666666667\n"
+      "Taux de compression:  -0.7307692307692308\n"
      ]
     }
    ],
@@ -210,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
