Correction pour selection val finale

--- a/Codage arithmetique.ipynb
+++ b/Codage arithmetique.ipynb
@@ -169,7 +169,7 @@
     "    #Essayer différentes sommes de puissance négative de 2\n",
     "    valfinale += np.power(2.0,-p)\n",
     "    valEnBits += '1' \n",
-    "    if valfinale > (Debut + Plage):\n",
+    "    if valfinale >= (Debut + Plage):\n",
     "        valfinale -= np.power(2.0,-p) #Hors de la borne maximale, on annule l'ajout.\n",
     "        valEnBits[-1] ='0'\n",
     "    elif valfinale >= Debut :\n",
@@ -298,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
